--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,30 +1,63 @@
+:root{
+    --softGreen:#92ad70;
+    --lightYellow:rgb(211, 216, 142);
+}
+*{
+    font-family: "Roboto";
+    font-size: 20px;
+    font-weight: 100;
+    font-style: normal;
+    font-variation-settings: none;
+    padding: 5px;
+    margin: 5px;
+}
+footer{
+    margin-top:10px;
+}
+#webname{
+    background-color: var(--softGreen);
+}
 #my_photo{
     height:200px;
     width:200px;
 }
-#contact_form > label,input{
-    display: inline-block;
+#contact_form *{
+    display: block;
+    margin:auto;
+    text-align: center;
 }
-  
-#contact_form > label{
-    width:80px;
-    text-align: right;
-    vertical-align: top;
+#submit{
+    background-color: var(--softGreen);
+    border:none;
+    border-radius: 12px;
 }
 #comm{
     height:200px;
 }
-footer{
-    position:absolute;
-    bottom: 0px;
-}
-
-a{
-    background-color: rgb(211, 216, 142);
+.nav_a{
+    background-color: var(--lightYellow);
     color: rgb(0, 0, 0);
     text-decoration: none;
     transition: ease 300ms;
+    margin-right:15px;
+    
+}
+header{
+    background: lightblue;
 }
 a:hover{
     background-color: grey;
+}
+table th{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: rgb(92, 177, 174);
+    color: rgb(255, 255, 255);
+    width: fit-content;
+}
+tr{
+    background-color: rgb(227, 227, 227);
+}
+tr:nth-child(even){
+    background-color: rgb(203, 203, 203);
 }
