--- a/views/cv.html
+++ b/views/cv.html
@@ -9,23 +9,25 @@
         <meta name="description" content="Lawrence Song professional website">
         <title>Lawrence Song</title>
         <link href="./static/imgs/favicon.png" rel="icon">
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <!-- General Layout  -->
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body style="font-family: Arial">
         <header>
-            <h1>Lawrence Song</h1>
+            <h1 id="webname">Lawrence Song</h1>
             <nav>
-                <a href="../index.html">Home</a>
-                <a href="./cv.html">CV</a>
-                <a href="./contact.html">Contact me</a>
-                <a href="./fun.html">For fun</a>
+                <a href="../index.html" class="nav_a">Home</a>
+                <a href="./cv.html" class="nav_a">CV</a>
+                <a href="./contact.html" class="nav_a">Contact me</a>
+                <a href="./fun.html" class="nav_a">For fun</a>
             </nav>
         </header>
         <div class="main">
             <h2>Curriculum Vitae</h2>
-            <table border="1">
+            <table id="cv_table">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -36,6 +38,14 @@
                     <tr>
                         <td>Carnegie Mellon University</td>
                         <td>My <b>undergraduate</b> school</td>
+                    </tr>
+                    <tr>
+                        <td>Bla</td>
+                        <td>Bla</td>
+                    </tr>
+                    <tr>
+                        <td>Bla</td>
+                        <td>Bla</td>
                     </tr>
                 </tbody>
             </table>
