--- a/views/fun.html
+++ b/views/fun.html
@@ -12,15 +12,18 @@
       
         <!-- General Layout  -->
         <link rel="stylesheet" href="../static/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
-    <body style="font-family: Arial">
+    <body>
         <header>
-            <h1>Lawrence Song</h1>
+            <h1 id="webname">Lawrence Song</h1>
             <nav>
-                <a href="../index.html">Home</a>
-                <a href="./cv.html">CV</a>
-                <a href="./contact.html">Contact me</a>
-                <a href="./fun.html">For fun</a>
+                <a href="../index.html" class="nav_a">Home</a>
+                <a href="./cv.html" class="nav_a">CV</a>
+                <a href="./contact.html" class="nav_a">Contact me</a>
+                <a href="./fun.html" class="nav_a">For fun</a>
             </nav>
         </header>
         <div class="main">
