--- a/views/contact.html
+++ b/views/contact.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="../static/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <script src="../static/js/script.js" defer></script>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -33,10 +34,10 @@
                 <input type="text" id="name" name="name" required><br><br>
 
                 <label for="email">Your email:</label>
-                <input type="text" id="email" name="email"><br><br>
+                <input type="email" id="email" name="email"><br><br>
 
                 <label for="comm">Comments:</label>
-                <input type="text" id="comm" name="comm"><br><br>
+                <textarea name="comm" id="comm" cols="30" rows="10"></textarea>
 
                 <input type="submit" value="Submit" id="submit"><br><br>
             </form>
