--- a/views/cv.html
+++ b/views/cv.html
@@ -13,6 +13,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <!-- General Layout  -->
+        <script src="../static/js/script.js" defer></script>
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body style="font-family: Arial">
