--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,11 @@ button{
     color: black;
     font-weight: 300;
     border:none;
+    transition: ease-in 50ms;
+}
+button:active{
+    transform: scale(0.98) translate(2px, 2px);
+    box-shadow: 1px 1px 3px rgb(0, 0, 0) inset;
 }
 h1{
     font-weight:500;
@@ -45,7 +50,7 @@ h2{
     font-size: 30px;
     padding-left: 15px;
     padding-right: 15px;
-    width:94vw;
+    width:90%;
 }
 b{
     color:inherit;
@@ -54,6 +59,7 @@ b{
     margin:-1px;
 }
 footer{
+    border-top:solid 1px rgba(255, 255, 255, 0.347);
     margin-top:auto;
 }
 #webname{
@@ -94,9 +100,6 @@ input, textarea{
 }
 #comm{
     height:200px;
-}
-nav{
-    margin-left:20px;
 }
 nav a{
     background-color: var(--mint);
@@ -144,9 +147,9 @@ tr>td{
     font-size: 12px;
     margin-left: -3px;
 }
-#fun_list{
+/* #fun_list{
     display: none;
-}
+} */
 
 .read_more_or_less{
     background: none;
@@ -181,4 +184,59 @@ tr>td{
 }
 #content{
     margin-left:15px;
+}
+.funIMG{
+    height: 50px;
+    width:50px;
+    border-radius: 100%;
+    background-color: var(--shallowOcean);
+}
+#duquesne_incline{
+    border-radius: 10% / 20%;
+    width: 520px;
+    height: 300px;
+    border: 0;
+}
+
+.container{
+    border-radius: 100%;
+    display: inline-block;
+    border-radius: 10%;
+    box-shadow: 
+        -10px -10px 15px rgba(255, 255, 255, 0.279) inset,
+        10px 10px 15px rgb(0, 0, 0) inset;
+}
+
+.container button{
+    font-weight: 400;
+}
+#myLoc{
+    width: 300px;
+    height: 300px;
+    border-radius: 8%;
+    border: solid 3px var(--shallowOcean);
+    padding: 0 0 0 0;
+}
+
+.mainLayout{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+    align-items: flex-start;
+}
+
+#weather{
+    display: inline;
+}
+#weather_icon{
+    width:30px;
+    height:30px;
+    padding:0 0 0 0;
+    margin: 0 0 0 15px;
+}
+#weather_forcast{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
