--- a/views/contact.html
+++ b/views/contact.html
@@ -19,7 +19,7 @@
 
         <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     </head>
-    <body onload="addYear()">
+    <body onload="initPage()">
         <header>
             <h1 id="webname">Lawrence Song</h1>
             <nav>
@@ -29,22 +29,28 @@
                 <a href="./fun.html">For fun</a>
             </nav>
         </header>
-        <div class="main">
-            <h2>Contact Me</h2>
-            <div id="content">
-                <form method="get" id="contact_form">
-                    <label for="name">Your name (required):</label>
-                    <input type="text" id="name" name="name" required><br>
-    
-                    <label for="email">Your email:</label>
-                    <input type="email" id="email" name="email"><br>
-    
-                    <label for="comm">Comments:</label>
-                    <textarea name="comm" id="comm" cols="30" rows="10"></textarea>
-    
-                    <p id="form_msg">Plese fill the red items </p>
-                    <input type="submit" value="Submit" id="submit" onclick="validate_form()"><br><br>
-                </form>
+        <div class="mainLayout">
+                <div class="item1">
+                    <h2>Find Me</h2>
+                    <iframe id="myLoc" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24289.773047702816!2d-79.94635166557619!3d40.448231354015356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f21f58679a9f%3A0x88716b461fc4daf4!2sCarnegie%20Mellon%20University!5e0!3m2!1sen!2sus!4v1742588400300!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="item 2">
+                    <h2>Contact Me</h2>
+                        <form method="get" id="contact_form">
+                            <label for="name">Your name (required):</label>
+                            <input type="text" id="name" name="name" required><br>
+            
+                            <label for="email">Your email:</label>
+                            <input type="email" id="email" name="email"><br>
+            
+                            <label for="comm">Comments:</label>
+                            <textarea name="comm" id="comm" cols="30" rows="10"></textarea>
+            
+                            <p id="form_msg">Plese fill the red items </p>
+                            <input type="submit" value="Submit" id="submit" onclick="validate_form()"><br><br>
+                        </form>
+                </div>
+               
     
     
                 <table>
@@ -64,10 +70,12 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
         </div>
         <footer>
-            &copy Design and coded by<b>Lawrence Song</b><p id="copyYear"></p>
+            &copy; Design and coded by<b>Lawrence Song</b><p id="copyYear"></p><br>
+            <div id="weather_forcast">
+                Weather Forecast: <!--<img id="weather_icon" src="../static/imgs/weather/中雪.png">--> <p id="weather"></p>
+            </div>
         </footer>
     </body>
 </html>
