--- a/views/cv.html
+++ b/views/cv.html
@@ -18,7 +18,7 @@
 
         <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     </head>
-    <body style="font-family: Arial" onload="addYear()">
+    <body style="font-family: Arial" onload="initPage()">
         <header>
             <h1 id="webname">Lawrence Song</h1>
             <nav>
@@ -53,11 +53,14 @@
                         </tr>
                     </tbody>
                 </table>
-                <a href="../static/files/Lingyi Song_Resume.pdf" target="_blank">Download my resume</a>
+                <a href="../static/files/LingyiSong_Resume.pdf" target="_blank">Download my resume</a>
             </div>
         </div>
         <footer>
-            &copy Design and coded by<b>Lawrence Song</b><p id="copyYear"></p>
+            &copy; Design and coded by<b>Lawrence Song</b><p id="copyYear"></p><br>
+            <div id="weather_forcast">
+                Weather Forecast: <!--<img id="weather_icon" src="../static/imgs/weather/中雪.png">--> <p id="weather"></p>
+            </div>
         </footer>
     </body>
 </html>
