--- a/static/css/style.css
+++ b/static/css/style.css
@@ -190,6 +190,8 @@ tr>td{
     width:50px;
     border-radius: 100%;
     background-color: var(--shallowOcean);
+
+    animation:spin 2s infinite linear;
 }
 #duquesne_incline{
     border-radius: 10% / 20%;
@@ -239,4 +241,16 @@ tr>td{
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(180deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
