--- a/views/contact.html
+++ b/views/contact.html
@@ -25,7 +25,7 @@
             <nav>
                 <a href="../index.html">Home</a>
                 <a href="./cv.html">CV</a>
-                <a href="./contact.html" class="selected">Contact me</a>
+                <a href="./contact.html">Contact me</a>
                 <a href="./fun.html">For fun</a>
             </nav>
         </header>
