--- a/views/cv.html
+++ b/views/cv.html
@@ -23,7 +23,7 @@
             <h1 id="webname">Lawrence Song</h1>
             <nav>
                 <a href="../index.html">Home</a>
-                <a href="./cv.html" class="selected">CV</a>
+                <a href="./cv.html">CV</a>
                 <a href="./contact.html">Contact me</a>
                 <a href="./fun.html">For fun</a>
             </nav>
