--- a/views/fun.html
+++ b/views/fun.html
@@ -26,7 +26,7 @@
                 <a href="../index.html">Home</a>
                 <a href="./cv.html">CV</a>
                 <a href="./contact.html">Contact me</a>
-                <a href="./fun.html" class="selected">For fun</a>
+                <a href="./fun.html">For fun</a>
             </nav>
         </header>
         <div class="mainLayout">
